<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fourthFragment.FourthFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_currencySearchLayout"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        app:boxStrokeColor="#1789DB"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="true"
        android:hint="Поиск валюты"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_currencySearchField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/chipGroup_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_currencySearchLayout">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Тенге. Казахстан"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Доллары. США"
                android:theme="@style/Theme.MaterialComponents.Light" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Евро. ЕС"
                android:theme="@style/Theme.MaterialComponents.Light" />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Лира. Туркия"
                android:theme="@style/Theme.MaterialComponents.Light" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/image_flagCardKz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_horizontal"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/image_flag"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:contentDescription=""
            android:src="@drawable/kz"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_currencyName"
        style="@style/currency_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_horizontal"
        android:text="@string/currency_kz" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_flagCardUsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardKz"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/image_flagUsa"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:contentDescription=""
            android:src="@drawable/usa"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_currencyUsa"
        style="@style/currency_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardKz"
        android:text="@string/currency_usa" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_flagCardEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardUsa"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/image_flagEuro"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:contentDescription=""
            android:src="@drawable/eu"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_currencyEuro"
        style="@style/currency_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardUsa"
        android:text="@string/currency_euro" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_flagCardTr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardEuro"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/image_flagTr"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:contentDescription=""
            android:src="@drawable/tur"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_currencyTr"
        style="@style/currency_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_flagCardEuro"
        android:text="@string/currency_tr" />
</androidx.constraintlayout.widget.ConstraintLayout>